--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "linkedin"
   ],
   "dependencies": {
-    "chokidar": "~1.0.0-rc4",
-    "cli": "~0.6.5"
+    "chokidar": "~1.5.1",
+    "cli": "~0.11.2"
   },
   "devDependencies": {
     "ayepromise": "~1.1.1",
